@@ -186,7 +186,8 @@ __all__ = [
     "AUX_XVG", "XVG_BAD_NCOL", #for testing .xvg auxiliary reader
     "AUX_XVG_LOWF", "AUX_XVG_HIGHF",
     "AUX_EDR", "AUX_EDR_TPR",
-    "AUX_EDR_XTC", "AUX_EDR_RAW",  # for testing .edr auxiliary reader
+    "AUX_EDR_XTC", "AUX_EDR_RAW",
+    "AUX_EDR_SINGLE_FRAME",  # for testing .edr auxiliary reader
     "MMTF", "MMTF_gz", 'MMTF_skinny',  # skinny - some optional fields stripped out
     "MMTF_skinny2",
     "ALIGN_BOUND",  # two component bound system
@@ -255,6 +256,7 @@ AUX_EDR = resource_filename(__name__, 'data/test.edr')
 AUX_EDR_RAW = resource_filename(__name__, 'data/aux_edr_raw.txt')
 AUX_EDR_TPR = resource_filename(__name__, 'data/aux_edr.tpr')
 AUX_EDR_XTC = resource_filename(__name__, 'data/aux_edr.xtc')
+AUX_EDR_SINGLE_FRAME = resource_filename(__name__, 'data/single_frame.edr')
 ENT = resource_filename(__name__, 'data/testENT.ent')
 GRO_missing_atomname = resource_filename(__name__, 'data/missing_atomname.gro')
 GRO_empty_atom = resource_filename(__name__, 'data/empty_atom.gro')
